[gd_scene load_steps=3 format=3 uid="uid://f1jfe1q22ly5"]

[ext_resource type="Script" path="res://scripts/ui/scene_viewer.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://theme_main" path="res://theme/main_theme.tres" id="2_theme"]

[node name="SceneViewer" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("2_theme")
theme_override_constants/separation = 20

[node name="ActionNameLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Nombre de la AcciÃ³n"
horizontal_alignment = 1

[node name="ImagePanel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="ImageTexture" type="TextureRect" parent="CenterContainer/VBoxContainer/ImagePanel"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="DismissButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ðŸ‘‹ Despedirse"
